# DeepIRES

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/deepires/: main.py
src/deepires/model/: __init__.py  model.py  sequence_encode.py
tests/: test_deepires_cli.py
